# api.necrom.ru

./: .dockerignore  Cargo.toml  Dockerfile
restore/: cache_reload.sql  cache_reload_trigger.sql  common.sql  dbuser.sql  defaults.sql  domains.sql  drop_cache_reload.sql  drop_common.sql  drop_dbuser.sql  drop_domains.sql  drop_geo.sql  drop_users.sql  geo.sql  logs.sql  order  search_path.sql  tour_order_turnover.sql  tour_order_turnover_ordered.sql  tour_order_turnover_selled.sql  users.sql
src/: main.rs
src/routes/: city.rs  country.rs  db.rs  hotel.rs  mod.rs  region.rs  restore.rs  root.rs  user.rs  worker.rs  worker_role.rs
src/types/: city.rs  client.rs  client_type.rs  country.rs  db_user.rs  employee.rs  employee_role.rs  hotel.rs  mod.rs  person.rs  region.rs  worker.rs  worker_role.rs
src/utils/: auth.rs  hint_on_relation_error.rs  mod.rs
templates/: restore_failure.html  restore_success.html
user/: index.html
